Include extra plot

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -268,6 +268,16 @@ The true solution is indicated by the white circle.\label{fig:posterior}}
 
 \begin{figure}
 \begin{center}
+\includegraphics[scale=0.35]{Figures/posterior2.eps}
+\caption{The marginal posterior distribution for $\mu$, the 
+hyperparameter describing the center of the distribution for
+$\log_{10}\left(\bar{\tau}\right)$, is plotted as the solid line.
+\label{fig:posterior2}}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
 \includegraphics[scale=0.5]{Figures/ccf.eps}
 \caption{The stacked cross-correlation function of the simulated data.
 \label{fig:ccf}}
