--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -103,7 +103,7 @@ We implement this idea with a Bayesian hierarchical model
 \citep{2012arXiv1208.3036L}.
 These models are becoming increasingly common in astrophysics and have been
 used in a variety of different fields
-\citep[e.g.][]{extreme_deconvolution, loredo, kelly, 2013arXiv1310.5177B, 2013AJ....146....7B}.
+\citep[e.g.][]{extreme_deconvolution, loredo, kelly, 2012AJ....143...90S, 2013arXiv1310.5177B, 2013AJ....146....7B}.
 
 \section{Model Assumptions}
 
@@ -357,6 +357,10 @@ al.}{2012}]{pancoast2} Pancoast A., et al., 2012, ApJ, 754, 49
 
 \bibitem[\protect\citeauthoryear{Peterson}{2008}]{peterson} 
 Peterson B.~M., 2008, NewAR, 52, 240 
+
+\bibitem[\protect\citeauthoryear{Shu et al.}{2012}]{2012AJ....143...90S} 
+Shu Y., Bolton A.~S., Schlegel D.~J., Dawson K.~S., Wake D.~A., Brownstein 
+J.~R., Brinkmann J., Weaver B.~A., 2012, AJ, 143, 90 
 
 \bibitem[\protect\citeauthoryear{Zu et al.}{2013}]{2013ApJ...765..106Z} Zu 
 Y., Kochanek C.~S., Koz{\l}owski S., Udalski A., 2013, ApJ, 765, 106 
