New figure (show the data)

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -227,6 +227,15 @@ cross-correlation techniques and is similar to the approach used by
 To test our hierarchical model, and compare it to the stacked cross-correlation
 function, we simulated data from 100 AGN.
 
+
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.5]{Figures/data.eps}
+\caption{Simulated data.\label{fig:data}}
+\end{center}
+\end{figure}
+
+
 The cross-correlation function for a single object is defined as follows. First,
 the mean levels $\bar{y}$ and $\bar{l}$ of the continuum and line light curves,
 are calculated (weighted by the reported size of the error bars on each
@@ -296,8 +305,6 @@ Brandon Kelly (UCSB) for many
 useful conversations about reverberation mapping. The STAN ({\tt mc-stan.org})
 team provided helpful advice about the use of their software. BJB is partially
 supported by the Marsden Fund (Royal Society of New Zealand).
-
-
 
 \begin{thebibliography}{99}
 \bibitem[\protect\citeauthoryear{Barth et al.}{2013}]{2013ApJ...769..128B} 
