--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -260,7 +260,7 @@ measurement):
 \bar{l} &=& \frac{\sum_{i=1}^{N_l} \left(l_i/\sigma_{l_i}^2\right)}{\sum_{i=1}^{N_l} \left(1/\sigma_{l_i}^2\right)}
 \end{eqnarray}
 
-The cross correlation function, as a function of lag $\tau$, is then defined as:
+The cross correlation function, as a function of lags $\tau$, is then defined as:
 \begin{eqnarray}
 \textnormal{CCF}(\tau) =
 \sum_{i=1}^{N_c} \sum_{j=1}^{N_l}
