--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -275,6 +275,13 @@ we show the stacked CCF from the 100 simulated AGN data sets.
 
 \begin{figure}
 \begin{center}
+\includegraphics[scale=0.5]{Figures/example_posteriors.eps}
+\caption{\label{fig:example_posteriors}}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
 \includegraphics[scale=0.5]{Figures/posterior.eps}
 \caption{The joint posterior distribution for $\mu$ and $\sigma$, hyperparameters
 describing the distribution of $\bar{\tau}$ values in the sample. The prior
