Mention the summaries in paper

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -338,8 +338,9 @@ The true solution is indicated by the white star symbol.\label{fig:posterior}}
 \end{figure}
 
 The marginal distribution for $\mu$ is shown in Figure~\ref{fig:posterior2}
-along with the posterior predictive distribution for the ``next'' $\bar{\tau}$
-value.
+along with the posterior predictive distribution for the ``next'' $\bar{\tau}$ value. The inference about $\mu$ can be summarised as
+$\mu = 0.892 \pm 0.033$, and the prediction about $\log_{10}(\bar{\tau})$
+may be summarised as $\log_{10}(\bar{\tau}) = 0.892 \pm 0.160$.
 
 \begin{figure}
 \begin{center}
@@ -352,8 +353,7 @@ $\log_{10}\left(\bar{\tau}\right)$, is plotted as the solid line.
 \end{figure}
 
 \section{Conclusions}
-Reverberation mapping is an important, yet observationally intensive, technique
-in studies of active galaxies.
+Reverberation mapping is an important, yet observationally intensive, technique in studies of active galaxies. 
 
 
 \section*{Acknowledgements}
